switch npm package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name":         "express-csrf"
+    "name":         "express-csrf-plug"
 ,   "description":  "Small helper plugin for the CSRF middleware in Express"
 ,   "version":      "0.0.1"
 ,   "author":       "Robin Berjon <robin@berjon.com>"
